--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.0.2+1
   url_launcher: ^6.2.5
+  dio: ^5.4.1
+  flutter_secure_storage: ^9.0.0
+  pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
   flutter_test:
