--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   # State Management
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
+  socket_io_client: ^2.0.3+1
 
   # Routing
   go_router: ^13.2.0
@@ -31,6 +32,7 @@ dependencies:
   url_launcher: ^6.2.5
   dio: ^5.4.1
   flutter_secure_storage: ^9.0.0
+  provider: ^6.0.0
   pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
